--- a/presentation/src/main/res/values-v27/themes.xml
+++ b/presentation/src/main/res/values-v27/themes.xml
@@ -9,7 +9,7 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.CarrotStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Shelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <item name="android:navigationBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
