--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -7,12 +7,14 @@
   ~ Please see: https://github.com/carrot-style/carrot-android/blob/main/LICENSE.
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="Theme.Shelper" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
-        <item name="android:navigationBarColor">@color/white</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primaryDark</item>
+        <item name="fontFamily">@font/notosans</item>
+        <item name="android:fontFamily">@font/notosans</item>
     </style>
 
     <style name="Theme.Shelper.Splash" parent="Theme.SplashScreen">
@@ -22,6 +24,5 @@
 
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:navigationBarColor">@color/white</item>
-        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
