Add navigation drawer

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
 
 <resources>
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
     <color name="backgroundWhite">#F4F5F9</color>
 
     <color name="secondary">#E7E9FE</color>
