--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -13,6 +13,7 @@
     android:id="@+id/cll_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:padding="30dp"
     tools:theme="@style/Theme.Shelper">
 
