--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -19,6 +19,7 @@
         android:id="@+id/dl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:openDrawer="start"
         tools:theme="@style/Theme.Shelper">
 
         <com.google.android.material.navigation.NavigationView
@@ -49,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/layout_drawer_guide"
+                    android:text="@string/activity_map_drawer_guide"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iv_close" />
@@ -59,7 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/layout_drawer_message"
+                    android:text="@string/activity_map_drawer_message"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_guide" />
@@ -69,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/layout_drawer_call"
+                    android:text="@string/activity_map_drawer_call"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_message" />
@@ -78,7 +79,7 @@
                     android:id="@+id/tv_information"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/layout_drawer_information"
+                    android:text="@string/activity_map_drawer_information"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
