--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -29,7 +29,7 @@
             android:layout_gravity="start">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cll_container_drawer"
+                android:id="@+id/cl_container_drawer"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="70dp"
@@ -89,7 +89,7 @@
         </com.google.android.material.navigation.NavigationView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cll_container"
+            android:id="@+id/cl_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:theme="@style/Theme.Shelper">
