--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -13,6 +13,7 @@
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
+        <item name="colorOnSurface">@color/primary</item>
         <item name="fontFamily">@font/notosans</item>
         <item name="android:fontFamily">@font/notosans</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
