--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
+        <item name="colorOnSurface">@color/primary</item>
         <item name="fontFamily">@font/notosans</item>
         <item name="android:fontFamily">@font/notosans</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
@@ -34,9 +35,14 @@
         <item name="android:navigationBarColor">@color/white</item>
     </style>
 
-    <style name="guide_chip" parent="@style/Widget.Material3.Chip.Filter">
-        <item name="chipBackgroundColor">@color/primary</item>
+    <style name="font_appearance" parent="TextAppearance.MaterialComponents.Chip">
         <item name="android:fontFamily">@font/notosans</item>
+    </style>
+
+    <style name="guide_chip" parent="@style/Widget.Material3.Chip.Filter">
+        <item name="chipBackgroundColor">@color/selector_guide_chip</item>
+        <item name="strokeColor">@color/primary</item>
+        <item name="android:textAppearance">@style/font_appearance</item>
     </style>
 
     <style name="iv_round_corner">
