--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -48,27 +48,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_round_menu_24" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_refresh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/activity_map_btn_refresh"
-                android:textColor="@color/black"
-                android:visibility="invisible"
-                app:backgroundTint="@color/primary"
-                app:icon="@drawable/ic_round_refresh_24"
-                app:iconTint="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_open_drawer"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/btn_open_drawer"
-                tools:visibility="visible" />
-
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bnv_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:itemRippleColor="@null"
+                app:itemTextColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:menu="@menu/navigation_map"
                 tools:layout_height="70dp" />
