--- a/app/src/main/res/layout/layout_guide_item.xml
+++ b/app/src/main/res/layout/layout_guide_item.xml
@@ -14,10 +14,10 @@
         android:id="@+id/cv_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
-        app:contentPadding="30dp"
-        tools:layout_margin="30dp">
+        app:contentPadding="30dp">
 
         <LinearLayout
             android:id="@+id/ll_container"
