--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -104,7 +104,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_guide" />
 
                 <TextView
-                    android:id="@+id/tv_call"
+                    android:id="@+id/tv_contact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
