--- a/app/src/main/res/layout/layout_guide_item.xml
+++ b/app/src/main/res/layout/layout_guide_item.xml
@@ -1,4 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Shelper © 2022 Team Helper. all rights reserved.
+  ~ Shelper license is under the MIT.
+  ~
+  ~ [layout_guide_item.xml] created by Ji Sungbin on 22. 2. 1. 오후 5:41
+  ~
+  ~ Please see: https://github.com/gdsckoreahackathon2022/01_Helper/blob/main/LICENSE.
+  -->
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -6,18 +14,19 @@
     <data>
 
         <variable
-            name="item"
+            name="guide"
             type="team.gdsc.shelper.activity.guide.model.GuideItem" />
     </data>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
-        app:contentPadding="30dp">
+        app:contentPadding="30dp"
+        tools:theme="@style/Theme.Shelper">
 
         <LinearLayout
             android:id="@+id/ll_container"
@@ -32,7 +41,7 @@
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 app:shapeAppearance="@style/iv_round_corner"
-                app:srcAny="@{item.image}"
+                app:srcAny="@{guide.image}"
                 tools:src="@tools:sample/avatars" />
 
             <TextView
@@ -41,29 +50,21 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginVertical="20dp"
-                android:text="@{item.title}"
+                android:text="@{guide.title}"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 tools:text="@tools:sample/lorem" />
 
-            <ScrollView
-                android:id="@+id/sv_content"
+            <TextView
+                android:id="@+id/tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fadeScrollbars="true">
-
-                <TextView
-                    android:id="@+id/tv_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{item.content}"
-                    android:textSize="15sp"
-                    tools:text="@tools:sample/lorem/random" />
-
-            </ScrollView>
+                android:text="@{guide.content}"
+                android:textSize="15sp"
+                tools:text="@tools:sample/lorem/random" />
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </layout>
