--- a/app/src/main/res/layout/layout_contact_item.xml
+++ b/app/src/main/res/layout/layout_contact_item.xml
@@ -20,6 +20,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_contact"
+        style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="10dp"
