--- a/app/src/main/res/layout/layout_guide_item.xml
+++ b/app/src/main/res/layout/layout_guide_item.xml
@@ -20,6 +20,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_container"
+        style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
