--- a/app/src/main/res/layout/layout_guide_item.xml
+++ b/app/src/main/res/layout/layout_guide_item.xml
@@ -24,8 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="15dp"
-        app:cardElevation="10dp"
+        app:cardElevation="5dp"
         app:contentPadding="30dp"
         tools:theme="@style/Theme.Shelper">
 
@@ -52,6 +53,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginVertical="20dp"
                 android:text="@{guide.title}"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 tools:text="@tools:sample/lorem" />
@@ -61,6 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{guide.content}"
+                android:textColor="@color/black"
                 android:textSize="15sp"
                 tools:text="@tools:sample/lorem/random" />
 
